force-app/main/default/objects/Popcorn_Persona__c/Popcorn_Persona__c.object-meta.xml
<CustomObject>
    <label>Popcorn Persona</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Popcorn Personas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>