force-app/main/default/objects/Popcorn_Persona__c/fields/DateOfBirth__c.field-meta.xml
<CustomField>
    <fullName>DateOfBirth__c</fullName>
    <label>Date of birth</label>
    <type>Date</type>
</CustomField>