force-app/main/default/objects/Popcorn_Persona__c/fields/EmailAddress__c.field-meta.xml
<CustomField>
    <fullName>EmailAddress__c</fullName>
    <label>Email address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>