force-app/main/default/objects/Popcorn_Persona__c/fields/MobileNumber__c.field-meta.xml
<CustomField>
    <fullName>MobileNumber__c</fullName>
    <label>Mobile number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>